--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "mia.html"></a></li>
-                <li><a href = "jordan.html"></a></li>
+                <li><a href="jordan.html"></a></li>
+                <li>=<a href="mia.html"></a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
