--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href="jordan.html">Jordan's Page</a></li>
-                <li>=<a href="mia.html">Mia's Page</a></li>
+                <li><a href="mia.html">Mia's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
