--- a/jordan.html
+++ b/jordan.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href="jordan.html">Jordan's Page</a></li>
-                <li>=<a href="mia.html">Mia's Page</a></li>
+                <li><a href="mia.html">Mia's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -23,13 +23,13 @@
     <main>
 
 
-<img src="img1.jpg" alt="Cat and baby chick">     
-<img src="img2.jpg" alt="Array of pets">  
-<img src="img3.jpg" alt="Dog holding stick">
-<img src="img4.jpg" alt="Dog and cat resting">
-<img src="img5.jpg" alt="Dog and kitty facing eachother">
-<img src="img6.jpg" alt="Puppy and kittens in a basket">
-<img src="img7.jpg" alt="Cat and dog laying in grass">
+<img src="images/img1.jpg" alt="Cat and baby chick">     
+<img src="images/img2.jpg" alt="Array of pets">  
+<img src="images/img3.jpg" alt="Dog holding stick">
+<img src="images/img4.jpg" alt="Dog and cat resting">
+<img src="images/img5.jpg" alt="Dog and kitty facing eachother">
+<img src="images/img6.jpg" alt="Puppy and kittens in a basket">
+<img src="images/img7.jpg" alt="Cat and dog laying in grass">
 <!--source: google images-->
     </main>
 
