--- a/mia.html
+++ b/mia.html
@@ -20,13 +20,13 @@
 
     </header>
     <main>
-        <img src="pets1.jpg" alt="Dog and cat with heart pillows">
-        <img src="pets2.jpg" alt="Puppy with other animals">
-        <img src="pets3.jpg" alt="White golden retriever">
-        <img src="pets4.jpg" alt="White dog with tongue out">
-        <img src="pets5.jpg" alt="Dog and cat laying down">
-        <img src="pets6.jpg" alt="Black puppy laying down">
-        <img src="pets7.jpg" alt="Big dog with a bunch of other animals">
+        <img src="images/pets1.jpg" alt="Dog and cat with heart pillows">
+        <img src="images/pets2.jpg" alt="Puppy with other animals">
+        <img src="images/pets3.jpg" alt="White golden retriever">
+        <img src="images/pets4.jpg" alt="White dog with tongue out">
+        <img src="images/pets5.jpg" alt="Dog and cat laying down">
+        <img src="images/pets6.jpg" alt="Black puppy laying down">
+        <img src="images/pets7.jpg" alt="Big dog with a bunch of other animals">
       
         <!--source: google images-->
     </main>
